added credits service to backend
